--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "@capacitor-community/electron": "^4.1.2",
-    "@capacitor-community/sqlite": "^4.6.3-3",
+    "@capacitor-community/sqlite": "^5.0.0",
     "@capacitor/android": "5.0.4",
     "@capacitor/core": "^5.0.0",
     "@capacitor/dialog": "^5.0.0",
